--- a/app/views/testWinChecker.html
+++ b/app/views/testWinChecker.html
@@ -2,7 +2,7 @@
 <head>
   <title>hi</title>
   <script type="text/javascript" src="../../public/js/node_modules/mathjs/dist/math.js"></script>
-  <script type="text/javascript" src="../../public/js/board_controller.js"></script>
+  <script type="text/javascript" src="../../public/js/win_check.js"></script>
 </head>
 <body>
 
