--- a/public/css/application.css
+++ b/public/css/application.css
@@ -10,6 +10,25 @@ table {
 td {
   height: 70px;
   width: 70px;
-  border: 2px solid black;
+  border: 4px solid #FDD017;
 }
 
+.disc{
+  /*position: absolute;*/
+  z-index: -1;
+  top: -55px;
+  left: 14px;
+  width: 46px;
+  height: 46px;
+  border-radius: 46px;
+  transition: .3s;
+  background: #d96666;
+}
+
+#disc.red{
+  background:#d96666;
+}
+
+.disc.black{
+  background: black;
+}
