--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -11,8 +11,10 @@
     application.css is where you put your styles
   -->
   <link rel="stylesheet" href="/css/application.css">
-
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="/js/node_modules/mathjs/dist/math.js" type="text/javascript"></script>
+  <script src="/js/model.js" type="text/javascript"></script>
+  <script src="/js/controller.js" type="text/javascript"></script>
   <script src="/js/application.js"></script>
 
   <title></title>
