--- a/public/css/application.css
+++ b/public/css/application.css
@@ -24,9 +24,9 @@ td {
 }
 
 .disc.red{
-  background:#d96666;
+  background: yellow;
 }
 
 .disc.black{
-  background: black;
+  background: blue;
 }
