--- a/app/views/board.erb
+++ b/app/views/board.erb
@@ -1,4 +1,4 @@
-<h1>CONNECT 4! 4! 4! 4!</h1>
+<h1>MORTAL KONNEKT 4</h1>
 
 <div class="container">
   <img src="/imgs/scorpion.png"/>
@@ -10,3 +10,4 @@
 <img id='flames' src="/imgs/PurpleFire.png"/>
 
 <img id='win' src="/imgs/fatality.png"/>
+
