--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,6 +10,7 @@
   <!--
     application.css is where you put your styles
   -->
+  <link href='https://fonts.googleapis.com/css?family=Metal+Mania' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/application.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/node_modules/mathjs/dist/math.js" type="text/javascript"></script>
