--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Metal Mania', cursive;
   color: red;
   background-color: black;
   text-align: center;
@@ -55,6 +56,7 @@ img {
 
 #win {
   bottom: 30px;
+  display: none;
 }
 
 
